narcolepsy nightmare youtube add

--- a/views/music.html
+++ b/views/music.html
@@ -191,7 +191,10 @@
                 <audio controls src="../public/audio/narcolepsynightmare.wav" class="my-2"></audio>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-10"></div>
+                        <div class="col-8"></div>
+                        <div class="col-2">
+                            <a href="https://youtu.be/aZdZyhyb3aI" class="btn btn-youtube" role="button" target="_blank"><i class="fab fa-youtube"></i></a>
+                        </div>
                         <div class="col-2">
                             <a href="https://soundcloud.app.goo.gl/JJQ4JKZkHtcEUyWz8" class="btn btn-soundcloud" role="button" target="_blank"><i class="fab fa-soundcloud"></i></a>
                         </div>
@@ -249,7 +252,7 @@
         </div>
 
         <div class="row mt-5">
-           <div class="col-lg-4 col-12">
+            <div class="col-lg-4 col-12">
                 <h2 class="text-light text-center my-3">Sera</h2>
                 <audio controls src="../public/audio/sera.wav" class="my-2"></audio>
                 <div class="container-fluid">
